fix: social links on mobile

--- a/Estilos/header.css
+++ b/Estilos/header.css
@@ -295,7 +295,7 @@ header{
         height: 50px;
         border-radius: 0;
         padding-bottom: 8px;
-        border-bottom: 2px solid rgba(167, 139, 250, 1);
+        border-bottom: 2px solid var(--iconLight);
     }
 
     .social-iconos i{
